# HSE_ML_P2024

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  fitness_history.csv  load_test.ipynb  load_test.py  main.py  main.spec  plot.py  requirements.txt  run_functional_test.py  run_load_test.py  setup.cfg  speciation.csv  species_fitness.csv  test_functional.py  train.py
.github/workflows/: CI.yml  python-package.yml
arcade_ver/: Consts.py  Window.py  main.py
arcade_ver/entities/: Camera.py  Car.py
assets/: env.txt
assets/MapConfigs/: OnlyPark.json  ParkWithBarriers.json  ParkWithEnemies.json  ParkWithObstacles.json  TestMap.json
assets/json/: ParkWithObstacles.json
assets/maps/: A2B.json  EnvGeneration.py  OnlyPark.json  ParkMe.json  ParkWithBarriers.json  ParkWithEnemies.json  ParkWithObstacles.json  Survive.json  TestMap.json
assets/pic/buttons/: Button.pdn  Button_narrow_hovered.pdn
assets/pic/extra/: Clouds.pdn  textured_plane.pdn
assets/pic/slider/: Slider_10.pdn
gym_game/: __init__.py
gym_game/envs/: CustomEnv.py  Game.py  __init__.py
models/: DQNPolicy.py
models_bin/: CEM.pkl  CEM2.pkl  CEM3.pkl  CEM4.pkl  CEM5.pkl  CEM6.pkl  distance.pkl  torch.pt
notebooks/: =0.2.1  CEM.ipynb  CEM_torch.ipynb  DQN.ipynb  SimpleDQN.ipynb  baseline.ipynb  load_test.ipynb  stable_baseline.ipynb
src/: main.py  requirements.txt
src/game_engine/: Core.py
src/game_engine/controllers/: Controller.py  TrainAI.py  TrainAIController.py  __init__.py  config.txt
src/game_engine/entities/: Button.py  Car.py  Indicator.py  MusicPlayer.py  ObjectFactory.py  Obstacle.py  ParkingPlace.py
src/game_engine/physics/: CarPhysicsModel.py
src/game_engine/scenes/: GameOfLifeScene.py  GameScene.py  LearningScene.py  PhysicScene.py  StartScene.py  __init__.py
src/physics/: CarPhysicsModel.py
src/physics/models/: CarPhysicsModel.py  MovableObstacle.py  MovableObstaclePhysicsModel.py  ParkingPlacePhysicModel.py  StaticObstacle.py  StaticObstaclePhysicsModel.py
src/render/: Camera.py  MimicTexture.py  RenderGroup.py  Window.py
src/render/animator/: BasicAnimator.py  FloatingAnimator.py  MoverAnimator.py  WanderAnimator.py  __init__.py
src/render/particle/: ParticleShow.py  __init__.py
src/ui/: game_screen.py
src/utils/: ExtraClasses.py  Loaders.py  __init__.py
tests/: TestCore.py  load_test.ipynb  load_test.py  test_functional.py
tools/pytest/: BUILD.bazel  defs.bzl
(+67 files in other folders)
